carboncopypro.com (archived on 2010-09-30)
{
  "alexa_rank": 54159,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6368,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.02,
  "homepage_snapshot_redirected_domain": "carboncopypro.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100926134426id_/http://www.carboncopypro.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100926134426id_/http%3A//carboncopypro.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "eachieve.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100930232150id_/http%3A//eachieve.net/zprivacy.php",
  "policy_title": "Privacy Policy",
  "policy_url": "eachieve.net/zprivacy.php",
  "sha1": "4862798d1e1bbac24fddac2ab64dcdc941205528",
  "simhash": 8540798551714423646,
  "simhash_updated": false,
  "site_hostname": "carboncopypro.com",
  "site_url": "http://carboncopypro.com",
  "smog": 16.28,
  "strict_updated": false,
  "timestamp": "20100930232150",
  "word_count": 997,
  "year": 2010
}

--- a/c/ca/car/carboncopypro.com.html
+++ b/c/ca/car/carboncopypro.com.html
@@ -1,15 +1,149 @@
-<!--The following is the downloaded HTML source of the carboncopypro.com privacy policy that was archived on 2010-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100531173414id_/http%3A//eachieve.net/zprivacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the carboncopypro.com privacy policy that was archived on 2010-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100930232150id_/http%3A//eachieve.net/zprivacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Privacy Policy</title>
-</head>
+<script type="text/javascript" src="/scripts/jquery.js"></script><script type="text/javascript" src="/scripts/include_js_onload.js"></script></head>
 <body>
 <table align="center" width="700" border="0">
   <tbody><tr>
     <td>
-    <div align="right"><script type="text/javascript" src="/scripts/language.js.php"></script></div>
+    <div align="right"><script type="text/javascript" src="scripts/language.js.php"></script>
+<link rel="stylesheet" href="/zmaster/stylesheet_shared.css.php" type="text/css" media="screen">
+<script type="text/javascript" src="/scripts/include_js.js"></script>
+<script type="text/javascript" src="/scripts/translate.js"></script><table><tbody><tr align="right"><td class="atranslate">Language: </td><td><div id="google_translate"><span><div id="div_notespopup_999" class="notespopup notespopup2" style="width: 250px;"><table border="0" width="100%"><tbody><tr valign="top"><td width="100%" style="border-right:0px;border-bottom:0px;"><div align="left">
+<script>
+<!--
+function google_translate_all_select(select){
+	var selected_language = select.options[select.selectedIndex];
+
+if(language_current != selected_language.value){
+var code_refresh_page = "change_language(selected_language.value, selected_language.text, false);  refresh_language('','');";
+
+	document.getElementById('translate_phrase_language').selectedIndex = select.selectedIndex;
+	change_language(selected_language.value, selected_language.text, true);
+
+}
+
+}
+-->
+</script>
+<b class="atranslate">Translate Page Into:</b><br><select id="translate_language" onchange="google_translate_all_select(this);" style="width:225px;"><option value="en" selected="">English</option>
+<option value="es">Spanish (Español)</option>
+<option value="no">Norwegian (Norsk)</option>
+<option value="sv">Swedish (Svenska)</option>
+<option value="-----" disabled="">-----</option>
+<option value="af">Afrikaans (Afrikaans)</option>
+<option value="sq">Albanian (Shqipe)</option>
+<option value="ar">Arabic (عربي)</option>
+<option value="be">Belarusian (Беларуская)</option>
+<option value="bg">Bulgarian (Български)</option>
+<option value="ca">Catalan (Català)</option>
+<option value="zh-CN">Chinese (Simplified) (中文（简体）)</option>
+<option value="zh-TW">Chinese (Traditional) (中文（繁體）)</option>
+<option value="hr">Croatian (Hrvatski)</option>
+<option value="cs">Czech (Čeština)</option>
+<option value="da">Danish (Dansk)</option>
+<option value="nl">Dutch (Nederlands)</option>
+<option value="en">English</option>
+<option value="et">Estonian (Eesti)</option>
+<option value="tl">Filipino (Filipino)</option>
+<option value="fi">Finnish (Suomi)</option>
+<option value="fr">French (Français)</option>
+<option value="gl">Galician (Galego)</option>
+<option value="de">German (Deutsch)</option>
+<option value="el">Greek (Ελληνικά)</option>
+<option value="iw">Hebrew (עברית)</option>
+<option value="hi">Hindi (हिन्दी)</option>
+<option value="hu">Hungarian (Magyar)</option>
+<option value="is">Icelandic (Íslenska)</option>
+<option value="id">Indonesian (Bahasa Indonesia)</option>
+<option value="ga">Irish (Gaeilge)</option>
+<option value="it">Italian (Italiano)</option>
+<option value="ja">Japanese (日本語)</option>
+<option value="ko">Korean (한국어)</option>
+<option value="lv">Latvian (Latviešu)</option>
+<option value="lt">Lithuanian (Lietuvių)</option>
+<option value="mk">Macedonian (Македонски)</option>
+<option value="ms">Malay (Bahasa Melayu)</option>
+<option value="mt">Maltese (Malti)</option>
+<option value="no">Norwegian (Norsk)</option>
+<option value="fa">Persian (فارسی)</option>
+<option value="pl">Polish (Polski)</option>
+<option value="pt">Portuguese (Português)</option>
+<option value="ro">Romanian (Român)</option>
+<option value="ru">Russian (Русский)</option>
+<option value="sr">Serbian (Српски)</option>
+<option value="sk">Slovak (Slovenský)</option>
+<option value="sl">Slovenian (Slovenski)</option>
+<option value="es">Spanish (Español)</option>
+<option value="sw">Swahili (Kiswahili)</option>
+<option value="sv">Swedish (Svenska)</option>
+<option value="th">Thai (ไทย)</option>
+<option value="tr">Turkish (Türkçe)</option>
+<option value="uk">Ukrainian (Українська)</option>
+<option value="vi">Vietnamese (Tiếng Việt)</option>
+<option value="cy">Welsh (Cymraeg)</option>
+<option value="yi">Yiddish (ייִדיש)</option>
+</select><br><br><b class="atranslate">Translate Phrase From English</b><br><textarea cols="25" rows="2" id="translate_phrase_text"></textarea><br><b class="atranslate">To:</b> <select id="translate_phrase_language" style="width:200px;"><option value="en" selected="">English</option>
+<option value="es">Spanish (Español)</option>
+<option value="no">Norwegian (Norsk)</option>
+<option value="sv">Swedish (Svenska)</option>
+<option value="-----" disabled="">-----</option>
+<option value="af">Afrikaans (Afrikaans)</option>
+<option value="sq">Albanian (Shqipe)</option>
+<option value="ar">Arabic (عربي)</option>
+<option value="be">Belarusian (Беларуская)</option>
+<option value="bg">Bulgarian (Български)</option>
+<option value="ca">Catalan (Català)</option>
+<option value="zh-CN">Chinese (Simplified) (中文（简体）)</option>
+<option value="zh-TW">Chinese (Traditional) (中文（繁體）)</option>
+<option value="hr">Croatian (Hrvatski)</option>
+<option value="cs">Czech (Čeština)</option>
+<option value="da">Danish (Dansk)</option>
+<option value="nl">Dutch (Nederlands)</option>
+<option value="en">English</option>
+<option value="et">Estonian (Eesti)</option>
+<option value="tl">Filipino (Filipino)</option>
+<option value="fi">Finnish (Suomi)</option>
+<option value="fr">French (Français)</option>
+<option value="gl">Galician (Galego)</option>
+<option value="de">German (Deutsch)</option>
+<option value="el">Greek (Ελληνικά)</option>
+<option value="iw">Hebrew (עברית)</option>
+<option value="hi">Hindi (हिन्दी)</option>
+<option value="hu">Hungarian (Magyar)</option>
+<option value="is">Icelandic (Íslenska)</option>
+<option value="id">Indonesian (Bahasa Indonesia)</option>
+<option value="ga">Irish (Gaeilge)</option>
+<option value="it">Italian (Italiano)</option>
+<option value="ja">Japanese (日本語)</option>
+<option value="ko">Korean (한국어)</option>
+<option value="lv">Latvian (Latviešu)</option>
+<option value="lt">Lithuanian (Lietuvių)</option>
+<option value="mk">Macedonian (Македонски)</option>
+<option value="ms">Malay (Bahasa Melayu)</option>
+<option value="mt">Maltese (Malti)</option>
+<option value="no">Norwegian (Norsk)</option>
+<option value="fa">Persian (فارسی)</option>
+<option value="pl">Polish (Polski)</option>
+<option value="pt">Portuguese (Português)</option>
+<option value="ro">Romanian (Român)</option>
+<option value="ru">Russian (Русский)</option>
+<option value="sr">Serbian (Српски)</option>
+<option value="sk">Slovak (Slovenský)</option>
+<option value="sl">Slovenian (Slovenski)</option>
+<option value="es">Spanish (Español)</option>
+<option value="sw">Swahili (Kiswahili)</option>
+<option value="sv">Swedish (Svenska)</option>
+<option value="th">Thai (ไทย)</option>
+<option value="tr">Turkish (Türkçe)</option>
+<option value="uk">Ukrainian (Українська)</option>
+<option value="vi">Vietnamese (Tiếng Việt)</option>
+<option value="cy">Welsh (Cymraeg)</option>
+<option value="yi">Yiddish (ייִדיש)</option>
+</select><br><input type="button" value="Translate" class="button_hover" onclick="document.getElementById('div_translate_phrase').style.display='inline';google_translate_phrase(document.getElementById('translate_phrase_text').value, 'en', document.getElementById('translate_phrase_language').options[document.getElementById('translate_phrase_language').selectedIndex].value, document.getElementById('div_translate_phrase_result'));"><br><div id="div_translate_phrase" style="display:none;"><br><b class="atranslate">Translated Phrase</b><br><div id="div_translate_phrase_result"></div></div><br><font size="-2"><span class="atranslate">Translation is provided by Google from English, and may not be perfect.</span></font><div id="div_translate_repost" style="display:none;"><form name="form_translate_repost" method="post"><input type="hidden" name="language" value="en"></form></div></div></td><td width="5px" style="border-right:0px;border-bottom:0px;"><a href="javascript:void(0);" onclick="ToggleNotesPopup('999', 'normal');" title="Close" style="color:#444444; text-decoration:none; font-size:10px;">[X]</a></td></tr></tbody></table></div><span id="span_notespopup_999" style="cursor:pointer;" onclick="ToggleNotesPopup('999', 'normal');" class=""><span style="color:blue; text-decoration:underline;"><span id="div_language_current">English</span></span>&nbsp;<img src="/images/icons/arrow_blue.jpg"></span></span>&nbsp;<span id="div_processing_google_translate" style="display:none"><img src="/images/processing.gif"></span></div> </td></tr><tr align="right"><td colspan="2" valign="middle"><img src="/images/flag_uk.gif" height="12" style="position:relative; top:-4px;"><img src="/images/translate_flags.gif"><img src="/images/flag_norway.gif" height="12" style="position:relative; top:-4px;"></td></tr></tbody></table></div>
   <table align="center" cellspacing="0" cellpadding="10" border="1" bordercolor="#999999" style="border-collapse:collapse;">
     <tbody><tr>
       <td>
@@ -37,6 +171,6 @@
   </tr>
 </tbody></table>
 
-<script type="text/javascript" src="/scripts/language_start.js.php"></script>
+
 
 </body></html>
