--- a/v/va/val/valuemystuffnow.com.html
+++ b/v/va/val/valuemystuffnow.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the valuemystuffnow.com privacy policy that was archived on 2010-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100527052042id_/http%3A//www.valuemystuffnow.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the valuemystuffnow.com privacy policy that was archived on 2010-10-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20101002152107id_/http%3A//www.valuemystuffnow.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" class="js cufon-active cufon-ready"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" class="js"><head>
 	<title>Privacy Policy Valuemystuffnow Ltd.</title>
 	<meta name="description" content="VALUEMYSTUFFNOW.COM considers the privacy and protection of its clients' personal data to be of utmost importance. To ensure that you feel confident about providing us with your personal information and photographs of your items when communicating with us and using our art and antiques valuation and appraisal services, we outline below our practices in relation to the collection and use of personal data.">
 	<meta name="keywords" content="privacy policy, appraisal services, protection, legal documents, legal">
@@ -9,13 +9,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Language" content="en">
 	<meta http-equiv="imagetoolbar" content="no">
+	<meta property="og:title" content="Value My Stuff Now">
+	<meta property="og:url" content="http://www.valuemystuffnow.com">
+	<meta property="og:type" content="website">
 	<link rel="shortcut icon" href="/images/favicon.ico">
 	<link rel="icon" href="/images/favico.gif" type="image/gif">
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
-	<link rel="stylesheet" href="/core/css/base.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="/css/richtext.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen">
+	<link rel="stylesheet" href="/static/global_0e2fa85cbf423b13b0a6a08b48d7a103.css" type="text/css" media="all">
 	<link rel="alternate" type="application/rss+xml" title="Latest News" href="/feed">	
 	<!--
 	===================================
@@ -25,9 +26,7 @@
 	Web: http://d3r.com
 	===================================
 	-->
-					<script type="text/javascript" src="/core/javascript/jquery.js"></script>
-	<script type="text/javascript" src="/core/javascript/cufon/cufon-yui.js"></script><style type="text/css">cufon{text-indent:0!important;}@media screen,projection{cufon{display:inline!important;display:inline-block!important;position:relative!important;vertical-align:middle!important;font-size:1px!important;line-height:1px!important;}cufon cufontext{display:-moz-inline-box!important;display:inline-block!important;width:0!important;height:0!important;overflow:hidden!important;text-indent:-10000in!important;}cufon canvas{position:relative!important;}}@media print{cufon{padding:0!important;}cufon canvas{display:none!important;}}</style>
-	<script type="text/javascript" src="/javascript/cufon/myriad.font.js"></script>
+		<script type="text/javascript" src="/static/head_1361dd6299ce54bb5f26e812580c97ba.js"></script>
         
         <script type="text/javascript">
         <!--
@@ -72,6 +71,7 @@
 				<li class="last "><a href="/contact">Contact</a></li>
 				<li><a href="/news">News</a></li>
 				<li><a href="/video">Video</a></li>
+				<li><a href="http://blog.valuemystuffnow.com">Blog</a></li>
 				<li><a href="/">Home</a></li>
 			</ul>
 		</li>
@@ -162,16 +162,14 @@ If you have any queries in relation to the use and protection of your personal d
             Cufon.now();
         //-->
         </script>
-	<script type="text/javascript" src="/core/flash/swfobject/swfobject.js"></script>
-	<script type="text/javascript" src="/core/javascript/jquery/plugins/jquery.cleverlabels.js"></script>
-	<script type="text/javascript" src="/core/javascript/jquery/plugins/jquery.simplemodal-1.3.js"></script>
-	<script type="text/javascript" src="/javascript/global.js"></script>
+	<script type="text/javascript" src="/static/body_002343930212a91a900fb5887b0008df.js"></script>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
 	try {
-		var pageTracker = _gat._getTracker("UA-15752042-1");	
+		var pageTracker = _gat._getTracker("UA-15752042-1");		
 		pageTracker._trackPageview();
 	} catch (err) {}
 </script>
