--- a/c/ca/cas/castingfrontier.com.html
+++ b/c/ca/cas/castingfrontier.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the castingfrontier.com privacy policy that was archived on 2010-04-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100414001947id_/http%3A//database.castingfrontier.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the castingfrontier.com privacy policy that was archived on 2010-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20101003031949id_/http%3A//database.castingfrontier.com/privacy_policy) for the most accurate reproduction.-->
 
 <html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns="http://www.w3.org/TR/REC-html40"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
