--- a/a/ap/apa/apartmentguide.com.html
+++ b/a/ap/apa/apartmentguide.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the apartmentguide.com privacy policy that was archived on 2010-04-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100422130712id_/http%3A//www.apartmentguide.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the apartmentguide.com privacy policy that was archived on 2010-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20101003085850id_/http%3A//www.apartmentguide.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>
@@ -10,8 +10,7 @@ Apartments for Rent and Rentals - Free Apartment Finder | ApartmentGuide.com
 <meta content="apartments, apartment, apartments for rent, apartment finder, apartment guide, apartment rental, apartment search, apartment for rent, low income, apartment locator, rent, lease, apts, cheap apartments, luxury apartment, find apartments, apartmnt, apartmentguide, rental aprtmnts" id="metaKeywords" name="keywords">
 <meta content="NOODP" name="ROBOTS">
 <meta content="NOYDIR" name="ROBOTS">
-<link rel="canonical" href="http://www.apartmentguide.com/privacy">
-<script src="http://b.scorecardresearch.com/beacon.js" type="text/javascript"></script>
+<link rel="canonical" href="http://www.apartmentguide.com/privacy/">
 <script type="text/javascript">
   //<![CDATA[
     var WEBTRENDS_ENABLED = "true";
@@ -23,20 +22,16 @@ Apartments for Rent and Rentals - Free Apartment Finder | ApartmentGuide.com
 
 
 
-<script src="/javascripts/schedule_appointment_minified_js.js?df4a7afcdccea73b97fb5f10683652c252883b37" type="text/javascript"></script>
-<link href="/stylesheets/pages_min.css?df4a7afcdccea73b97fb5f10683652c252883b37" media="screen" rel="stylesheet" type="text/css">
+<script src="/javascripts/schedule_appointment_minified_js.js?9e029422c3ea2d4975b00920934ddc906a1b4cb8" type="text/javascript"></script>
+<link href="/stylesheets/pages_min.css?9e029422c3ea2d4975b00920934ddc906a1b4cb8" media="screen" rel="stylesheet" type="text/css">
 
-<script src="/v1/leads/jquery.lead_service.js?df4a7afcdccea73b97fb5f10683652c252883b37" type="text/javascript"></script>
 <!--[if lte IE 6]>
-<link href="/stylesheets/shared/ie6.css?df4a7afcdccea73b97fb5f10683652c252883b37" media="screen" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/shared/ie6.css?9e029422c3ea2d4975b00920934ddc906a1b4cb8" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
-<link href="/stylesheets/shared/print.css?df4a7afcdccea73b97fb5f10683652c252883b37" media="print" rel="stylesheet" type="text/css">
-</head><body><div id="low_bandwidth">
-false
-</div>
+<link href="/stylesheets/shared/print.css?9e029422c3ea2d4975b00920934ddc906a1b4cb8" media="print" rel="stylesheet" type="text/css">
+</head>
 
-
-
+<body>
 <div id="header">
 <a href="http://www.apartmentguide.com/" class="sprite logo" title="ApartmentGuide.com">Apartmentguide.com</a>
 <!--From shared partial-->
@@ -44,12 +39,12 @@ false
   <li><a href="http://www.apartmentguide.com/">Home</a></li>
   <li><a href="http://moving.apartmentguide.com">Moving Center</a></li>
   <li><a href="/metros/">Cities &amp; Metros</a></li>
-  <li><a href="http://neighborhoods.apartmentguide.com/neighborhoods">Neighborhoods</a></li>
-  <li><a href="http://my.apartmentguide.com/" rel="nofolow">Manager Login</a></li>
+  <li><a href="http://www.apartmentguide.com/favorites" class="wt_zu_003J link_my_favorites" rel="nofollow">My Favorites</a></li>
+  
 </ul>
-<div class="ag_box round" id="small_search">
+<div class="round" id="small_search">
 <form action="/" id="search_form" method="post">
-<input class="search" id="user_search" name="user_search" tabindex="2" type="text">
+<input class="search" id="user_search" name="user_search" tabindex="2" type="text" value="Washington, DC">
 <input id="link_id" name="link_id" type="hidden">
 <input id="typed" name="typed" type="hidden">
 <input id="channel" name="channel" type="hidden" value="apartments">
@@ -173,9 +168,6 @@ Company Info:
 <a href="/about/" rel="nofollow">About us</a>
 </li>
 <li>
-<a href="/comments/new" rel="nofollow">Comments</a>
-</li>
-<li>
 <a href="/employment" rel="nofollow">Employment</a>
 </li>
 <li>
@@ -210,8 +202,19 @@ Site Links:
 <li>
 <a href="http://movingtoanapartment.com/" target="_blank">Apartment Living</a>
 </li>
-<li>
+<li class="sprite lwu">
+<!--
 <a href="/list_with_us" class="sprite lwu" rel="nofollow"></a>
+-->
+<ul>
+<li class="title">PROPERTY MANAGERS</li>
+<li class="login">
+<a href="http://my.apartmentguide.com/" rel="nofolow">Login</a>
+</li>
+<li class="join">
+<a href="/list_with_us" rel="nofollow">List with Us</a>
+</li>
+</ul>
 </li>
 <li>
 <a href="http://www.twitter.com/aptguide" class="sprite twitter" rel="nofollow" target="blank"></a>
@@ -237,12 +240,13 @@ Consumer Source Inc. A PRIMEDIA Company. All rights reserved.
 <a href="/equal_housing_opportunity" class="eho sprite" rel="nofollow">Equal Housing Opportunity</a>
 <span class="dev_info">
 Host:
-apartmentguide-03
+apt-phy-10.atl.primedia.com
 </span>
 </p>
 </div>
 
-<img alt="?r=p&amp;px=1444&amp;v=1&amp;rnd=188365739172436" border="0" height="1" src="http://p.opt.fimserve.com/bht/?r=p&amp;px=1444&amp;v=1&amp;rnd=188365739172436" width="1">
+<div class="zutron__templates"></div>
+<img alt="?r=p&amp;px=1444&amp;v=1&amp;rnd=2318889745667691" border="0" height="1" src="http://p.opt.fimserve.com/bht/?r=p&amp;px=1444&amp;v=1&amp;rnd=2318889745667691" width="1">
 
 <!-- Google -->
 <script type="text/javascript">
@@ -267,12 +271,37 @@ apartmentguide-03
   //]]>
 </script>
 
-<script src="http://onesearch.svc.primedia.com/javascripts/onesearch_min.js?df4a7afcdccea73b97fb5f10683652c252883b37" type="text/javascript"></script>
+<script src="http://onesearch.svc.primedia.com/javascripts/onesearch_min.js?9e029422c3ea2d4975b00920934ddc906a1b4cb8" type="text/javascript"></script>
+<script src="/javascripts/shared/prm_dialog-1.3.1.js?9e029422c3ea2d4975b00920934ddc906a1b4cb8" type="text/javascript"></script><script src="/zutron/javascripts/zutron.js?9e029422c3ea2d4975b00920934ddc906a1b4cb8" type="text/javascript"></script><script type="text/javascript">
+//<![CDATA[
+
+      $(document).ready(function(){
+        if($('#profile').length){
+          setTimeout(function(){
+            if($('.loading').length){
+              $('#profile').html("<div class='breadcrumb'></div>\n    <div class='ag_box round'>\n      <div style='font-size: 2.0em; text-align: center; padding: 150px 0 20px 0;'>\n        <b>Service Not Available</b>\n      </div>\n      <p class='body_small' style='text-align: center; padding: 0 350px;'>\n        We're sorry. The personalization service is not available right now. Please\n        try again later or select one of the options below.\n      </p>\n      <p class='body_medium' style='text-align: left; margin: 50px 300px 50px 300px;'>\n        <a href=\"/\" class=\"link\">Search for an Apartment</a><br />\n        <a href=\"/\" class=\"link\">Apartment Guide Home Page</a><br />\n        <a href=\"/articles/index.aspx\" class=\"link\">Find Products and Services in Your Area</a>\n      </p>\n      <p style='text-align: right;'><img border='0' src='/images_alt/ehobox.jpg' /></p>\n      <div class='clearboth'></div>\n    </div>");
+            }
+          }, 5000);
+        }
+      }); 
+    
+//]]>
+</script>
 <!-- Rubicon -->
 <script type="text/javascript">
 oz_partner_channel = "7442/11969";
 </script>
 <script defer="defer" src="http://tap-cdn.rubiconproject.com/partner/scripts/rubicon/alice.js" type="text/javascript"></script>
+<script type="text/javascript">
+  //<![CDATA[
+    $.getScript("http://view.atdmt.com/jaction/bvkapt_SiteWideTag_1/v3/ato.ORDERID/atc1.unique_id");
+    $.getScript("http://aptg.netmng.com/?aid=227");
+  //]]>
+</script>
+
+<noscript>
+<iframe frameborder="0" height="1" leftmargin="0" marginheight="0" marginwidth="0" scrolling="No" src="http://view.atdmt.com/iaction/bvkapt_SiteWideTag_1/v3/ato.ORDERID/atc1.unique_id" topmargin="0" width="1"></iframe>
+</noscript>
 
 
 
