caspio.com (archived on 2013-12-20)
{
  "alexa_rank": 36047,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 14755,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.02,
  "homepage_snapshot_redirected_domain": "caspio.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131003100526id_/http://www.caspio.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131003100526id_/http%3A//caspio.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "caspio.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131220035213id_/http%3A//www.caspio.com/company/legal/privacy-statement.aspx",
  "policy_title": "Caspio Privacy Statement",
  "policy_url": "caspio.com/company/legal/privacy-statement.aspx",
  "sha1": "45126cf047b5efcea7878a74ad2fc7cbd2625ef2",
  "simhash": 15635306913045920202,
  "simhash_updated": false,
  "site_hostname": "caspio.com",
  "site_url": "http://caspio.com",
  "smog": 14.98,
  "strict_updated": true,
  "timestamp": "20131220035213",
  "word_count": 2368,
  "year": 2013
}

--- a/c/ca/cas/caspio.com.html
+++ b/c/ca/cas/caspio.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the caspio.com privacy policy that was archived on 2013-04-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130420155928id_/http%3A//www.caspio.com/company/legal/privacy-statement.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the caspio.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220035213id_/http%3A//www.caspio.com/company/legal/privacy-statement.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" slick-uniqueid="1"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>
 	
@@ -17,7 +17,7 @@
   
   
 
-<script type="text/javascript" async="" src="https://web.archive.org/web/20121025111458/https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" charset="UTF-8" src="//web.archive.org/web/20130927114430/https://rum-static.pingdom.net/prum.min.js"></script><script type="text/javascript" src="/login/BridgeLogin/BridgeLoginLib.js?v=7.2"> </script><script type="text/javascript" src="/scripts/mootools-core.js?v=1.3.2"> </script><script type="text/javascript" src="/scripts/mootools-more.js?v=1.3.2.1"> </script><script type="text/javascript" src="/scripts/navbar.js?v=1.0"> </script><script type="text/javascript" src="/scripts/PingdomRUM.js"> </script>
+<script async="" type="text/javascript" src="//107466.hittail.com/mlt.js"></script><script type="text/javascript" async="" src="https://web.archive.org/web/20121025111458/https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" charset="UTF-8" src="//web.archive.org/web/20130927114430/https://rum-static.pingdom.net/prum.min.js"></script><script type="text/javascript" src="/login/BridgeLogin/BridgeLoginLib.js?v=7.2"> </script><script type="text/javascript" src="/scripts/mootools-core.js?v=1.3.2"> </script><script type="text/javascript" src="/scripts/mootools-more.js?v=1.3.2.1"> </script><script type="text/javascript" src="/scripts/navbar.js?v=1.0"> </script><script type="text/javascript" src="/scripts/PingdomRUM.js"> </script>
   <script type="text/javascript" src="/scripts/menu.js?v=1.0"> </script>
   
   
@@ -42,14 +42,11 @@
                   <a href="http://www.caspio.com/company/contact.aspx">Contact</a>
                 </div>
                 <div id="loginlinks">
-                  <script type="text/javascript" src="/scripts/login.js?v=1.0"> </script><div id="loginwrapper" style="" margin-left:="" 20px""=""><a href="" onclick="f_openMain('https://web.archive.org/login/BridgeLogin/?s2=1'); return false;"><img src="//web.archive.org/web/20121025111442/http://d23b32zmhbr2ct.cloudfront.net/images/header/btn-login.gif" width="128" height="26" border="0" alt="Online Database - Login"></a></div>
-                  <noscript>
                     <div id="loginwrapper" style="margin-left: 20px">
-                      <a href="https://www.caspio.com/login/javascriptdisabled/" class="loginbutton" title="Login to Caspio Online Database">
-                          <img src="//d23b32zmhbr2ct.cloudfront.net/images/header/btn-login.gif" width="128" height="26" border="0" alt="Online Database - Login" /></a>
+                      <a href="https://www.caspio.com/login/bridgelogin/default.aspx" target="BridgeLogin" class="loginbutton" title="Login to Caspio Online Database">
+                          <img src="//d23b32zmhbr2ct.cloudfront.net/images/header/btn-login.gif" width="128" height="26" border="0" alt="Online Database - Login"></a>
                        </div>
-                    </noscript>
-                </div>
+                  </div>
               </div>
             
         </div>
@@ -231,7 +228,7 @@
 
 <h2>For Website Users and Clients</h2>
 
-<p>Last modified February 11, 2013.</p>
+<p>Last modified May 17, 2013.</p>
 
 <h3>OVERVIEW</h3>
 
@@ -252,15 +249,15 @@ for compliance with <a href="http://www.truste.com/privacy-program-requirements/
 program requirements</a> including transparency, accountability and
 choice regarding the collection and use of your personal
 information. The TRUSTe program does not cover downloadable
-software and only covers the sites <a href="/">www.caspio.com</a><span>&nbsp;and&nbsp;</span> <a href="/">caspio.net</a><span>.&nbsp;</span> TRUSTe's mission, as an
-independent third party, is to accelerate online trust among
-consumers and organizations globally through its leading privacy
-trustmark and innovative trust solutions. Please direct all your
-inquiries pertaining to the Site, Service, or this Statement to us
-by <a href="/company/contact.aspx">contacting Caspio</a>. In the event
-your inquiry isn't acknowledged within a reasonable time
-expectation, or hasn't been addressed to your satisfaction, please
-<a href="http://www.truste.com/consumers/watchdog_complaint.php" rel="nofollow" target="_blank">contact TRUSTe</a>. TRUSTe shall
+software and only covers caspio.com webistes<span>.&nbsp;</span>
+TRUSTe's mission, as an independent third party, is to accelerate
+online trust among consumers and organizations globally through its
+leading privacy trustmark and innovative trust solutions. Please
+direct all your inquiries pertaining to the Site, Service, or this
+Statement to us by <a href="/company/contact.aspx">contacting
+Caspio</a>. In the event your inquiry isn't acknowledged within a
+reasonable time expectation, or hasn't been addressed to your
+satisfaction, please <a href="http://www.truste.com/consumers/watchdog_complaint.php" rel="nofollow" target="_blank">contact TRUSTe</a>. TRUSTe shall
 then serve as a liaison with us to resolve your concerns.</p>
 
 <p>Caspio complies with the U.S.-EU Safe Harbor Framework and the
@@ -570,14 +567,8 @@ content, or to submit and update information.</p>
 
 <h3>COMMENTS AND SUGGESTIONS</h3>
 
-<p>To contact us regarding this Privacy Statement, <a href="/company/contact.aspx">contact us</a> on the Caspio.com website
-or write to Caspio at:</p>
-
-<p><strong>Address:</strong><br>
- Caspio, Inc.<br>
- Privacy<br>
- <span>2953 Bunker Hill Lane, Suite 201</span><br>
- <span>Santa Clara, CA 95054&nbsp;USA</span></p>
+<p>To contact us regarding this Privacy Statement, <a href="/company/contact.aspx">contact us</a> on the Caspio.com
+website.</p>
 
       </div>
     </div>      
@@ -613,7 +604,7 @@ or write to Caspio at:</p>
                   <a href="http://howto.caspio.com" target="_blank">Online Help</a><br>
                   <a href="http://howto.caspio.com/getting-started/" target="_blank">Video Tutorials</a><br>                  
                   <a href="http://www.caspio.com/support/websessions.aspx">Training</a><br>                  
-                  <a href="http://www.caspio.com/support/product-updates.aspx">Product Updates</a>
+                  <a href="http://www.caspio.com#">Product Updates</a>
                 </div>
 </div>
 <div class="footer-content-container">
@@ -662,6 +653,11 @@ or write to Caspio at:</p>
       </div>
     </div>
     <script type="text/javascript" src="/scripts/googleanalytics.js?v=1.0"> </script>
+    <!-- HitTail Code -->
+    <script type="text/javascript">
+  (function(){ var ht = document.createElement('script');ht.async = true;
+    ht.type='text/javascript';ht.src = '//107466.hittail.com/mlt.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ht, s);})();</script>
   
 
 </body></html>
