paradoxplaza.com (archived on 2013-12-20)
{
  "alexa_rank": 13813,
  "analysis_subcorpus": true,
  "categories": "business;games;shopping",
  "char_count": 10647,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.84,
  "homepage_snapshot_redirected_domain": "paradoxplaza.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130930104811id_/http://www.paradoxplaza.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130930104811id_/http%3A//paradoxplaza.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "paradoxplaza.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131220041028id_/http%3A//www.paradoxplaza.com/privacy",
  "policy_title": "Paradox Interactive AB - Paradox Interactive",
  "policy_url": "paradoxplaza.com/privacy",
  "sha1": "ef240a3c4e03f10d91582a012db2d4d691fddb77",
  "simhash": 8031519168217079818,
  "simhash_updated": false,
  "site_hostname": "paradoxplaza.com",
  "site_url": "http://paradoxplaza.com",
  "smog": 17.51,
  "strict_updated": true,
  "timestamp": "20131220041028",
  "word_count": 1659,
  "year": 2013
}

--- a/p/pa/par/paradoxplaza.com.html
+++ b/p/pa/par/paradoxplaza.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the paradoxplaza.com privacy policy that was archived on 2013-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130529124154id_/http%3A//www.paradoxplaza.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paradoxplaza.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220041028id_/http%3A//www.paradoxplaza.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" class="js"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -97,7 +97,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
  <input type="search" maxlength="128" name="search_block_form" id="edit-search-block-form-1" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-d3819a0b26e9531d97457d756bcfc9cf" value="form-d3819a0b26e9531d97457d756bcfc9cf">
+<input type="hidden" name="form_build_id" id="form-d8232f43ed56552854f375ec2eee0738" value="form-d8232f43ed56552854f375ec2eee0738">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
 </div>
 
@@ -131,11 +131,15 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 <div id="block-block-1" class="block block-block ">
 
   <div class="content">
-    <p><a href="http://www.facebook.com/ParadoxInteractive" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/2.png" title="" width="32"></a><a href="http://twitter.com/#!/PdxInteractive" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/3.png" title="" width="32"></a><a href="http://www.youtube.com/user/Paradoxplaza" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/4.png" title="" width="32"></a><a href="https://plus.google.com/112000708216060208177/ " target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/gp_0.png" title="" width="32"></a><a href="http://www.paradoxplaza.com/news/feed" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/rss.png" title="" width="32"></a></p>
+    <p><a href="http://www.facebook.com/ParadoxInteractive" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/2.png" title="" width="32"></a><a href="http://twitter.com/#!/PdxInteractive" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/3.png" title="" width="32"></a><a href="http://www.youtube.com/user/Paradoxplaza" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/4.png" title="" width="32"></a>
+<a href="http://open.spotify.com/artist/75N2nC2KNgaQ1e6bGs0wyc" target="_blank"><img src="/sites/default/files/imagefield_thumbs/spotify.png"></a>
+<a href="https://plus.google.com/112000708216060208177/ " target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/gp_0.png" title="" width="32"></a><a href="http://www.paradoxplaza.com/news/feed" target="_blank"><img alt="" height="32" src="http://www.paradoxplaza.com/sites/default/files/rss.png" title="" width="32"></a></p>
 
 <p style=""><a href="http://www.paradoxplaza.com/shop" target="_blank"><img alt="" height="72" src="http://www.paradoxplaza.com/sites/default/files/shoplogo.png" title="" width="160"></a></p>
 
-<p style=""><a href="http://www.paradoxplaza.com/buy" target="_blank"><img alt="" height="39" src="http://www.paradoxplaza.com/sites/default/files/featured_1.png" title="" width="160"></a></p>  </div>
+<p style=""><a href="http://www.paradoxplaza.com/buy" target="_blank"><img alt="" height="39" src="http://www.paradoxplaza.com/sites/default/files/featured_1.png" title="" width="160"></a></p>
+
+<p style=""><a href="http://www.paradoxplaza.com/books" target="_blank"><img alt="" height="39" src="http://www.paradoxplaza.com/sites/default/files/paradoxbooks.png" title="" width="160"></a></p>  </div>
 </div>
 <div id="block-block-4" class="block block-block ">
 
@@ -184,7 +188,8 @@ new TWTR.Widget({
       </div>
     
           <div id="footer-message" class="grid-10 prefix-3 suffix-3 alpha omega">
-        © Paradox Interactive. Trademarks belong to their respective owners. All rights reserved.      </div>
+        © Paradox Interactive®. Trademarks belong to their respective owners. 
+All rights reserved.      </div>
       </div>
 
 
