--- a/k/ke/ked/kedna.com.html
+++ b/k/ke/ked/kedna.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kedna.com privacy policy that was archived on 2013-05-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130509010623id_/http%3A//www.kedna.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kedna.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220042026id_/http%3A//www.kedna.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><base href="http://www.kedna.com/"> <script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">
 var googletag = googletag || {};
@@ -46,7 +46,6 @@ googletag.enableServices();
 	addonNavigation.getParams = {'a' : '28','b' : '145'};
 //]]>
 </script>			<!--  This loads the RSS feed  -->	<link rel="alternate" type="application/rss+xml" title="Newest Listing Feed" href="rss_listings.php">			<link href="geo_templates/kedna/external/css/theme_styles.css" rel="stylesheet" type="text/css">	<link href="geo_templates/kedna/external/css/primary_theme_styles.css" rel="stylesheet" type="text/css">	<link href="geo_templates/kedna/external/css/secondary_theme_styles.css" rel="stylesheet" type="text/css"></head><body><div class="outer_shell">	
-
 <!-- START HEADER -->
 <div id="header">
 	<a href="http://www.kedna.com" id="header_logo" title="Free Classifieds">
@@ -162,7 +161,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-2');
 		 )
 	
 <div class="fb_button fb_button_small">
-	<a href="https://www.facebook.com/dialog/oauth?client_id=453522611351691&amp;redirect_uri=http%3A%2F%2Fwww.kedna.com%2Fprivacy.html&amp;state=8e818a10120942391987d078457c701e&amp;scope=email" class="fb_button_small">
+	<a href="https://www.facebook.com/dialog/oauth?client_id=453522611351691&amp;redirect_uri=http%3A%2F%2Fwww.kedna.com%2Fprivacy.html&amp;state=3633fdd431a6cc199a1e04b6146cfa1f&amp;scope=email" class="fb_button_small">
 		<span class="fb_button_text">
 							Login with Facebook
 					</span>
@@ -180,10 +179,17 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-2');
 	
 </div>
 
-<!-- 728-90-TopAds -->
-<div id="div-gpt-ad-1344195967593-1" style="width:728px; height:90px;">
-<script type="text/javascript">
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-1'); });
+<div>
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-8774517697094380";
+/* Kedna 728 x 90 Top */
+google_ad_slot = "3063481508";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 
 </div>
@@ -282,12 +288,20 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-1');
 
 </div>	</div>	<div class="clr"></div></div><!-- START FOOTER -->
 
-<br><center>	 <!-- 728-90-Bottom-Ads -->
-<div id="div-gpt-ad-1344195967593-0" style="width:728px; height:90px;">
-<script type="text/javascript">
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-0'); });
+<br><center>	 
+
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-8774517697094380";
+/* Kedna 728 x 90 Bottom */
+google_ad_slot = "6365430255";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
 </script>
-</div></center>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+</center>
 <div id="footer">
 
 	<div class="outer_shell">
@@ -296,7 +310,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-0');
 		
 			<h3>Contact Us</h3>
 			<p>Need assistance? Have a question that isn't answered in our <a href="http://www.kedna.com/help-ads.html" title="Help">help</a> sections? 
-			You can contact support by visiting our <a href="http://www.kedna.com/contact.html" title="Contact US">contact us</a> page.</p>
+					You can contact support by visiting our <a href="http://www.kedna.com/contact.html" title="Contact US">contact us</a> page. <br> <a href="http://www.airmaxisp.com/" title="Internet Service Providers">Internet Service Providers</a></p>
 		</div>
 		
 		<div class="footer_divider"></div>
@@ -320,17 +334,13 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1344195967593-0');
 		</ul>
 		<div class="disclaimer">
 			<h4>Copyright ©  2013 Web Plus Online, Corp.  All Rights Reserved.</h4>
-			<h5>Web Marketing By: <a href="http://www.seonifty.com" title="SEO Firm">SEO Nifty Firm</a></h5>
-			<p>Use of this Web site constitutes acceptance of the <a href="http://www.kedna.com/terms.html" title="User Agreement">User Agreement</a> and <a href="http://www.kedna.com/privacy.html" title="Privacy Policy">Privacy Policy</a>.</p>
+			
+            <p>Use of this Web site constitutes acceptance of the <a href="http://www.kedna.com/terms.html" title="User Agreement">User Agreement</a> and <a href="http://www.kedna.com/privacy.html" title="Privacy Policy">Privacy Policy</a>.</p>
 		    <p>Designated trademarks and brands are the property of their respective owners.</p>
 			
 			<br>
 			
-			<table><tbody><tr><td><a name="trustlink" href="http://secure.trust-guard.com/certificates/1749" target="_blank" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; window.open(this.href.replace('http', 'https'),'welcome','location='+nonwin+',scrollbars=yes,width=517,height='+screen.availHeight+',menubar=no,toolbar=no'); return false;" oncontextmenu="var d = new Date(); alert('Copying Prohibited by Law - This image and all included logos are copyrighted by trust-guard \251 '+d.getFullYear()+'.'); return false;"><img name="trustseal" alt="Security Verified Seal" style="border: 0;" src="http://seals.trust-guard.com/security-1749-mini-white.gif"></a></td>
- <td><a name="trustlink" href="http://secure.trust-guard.com/certificates/1749" target="_blank" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; window.open(this.href.replace('http', 'https'),'welcome','location='+nonwin+',scrollbars=yes,width=517,height='+screen.availHeight+',menubar=no,toolbar=no'); return false;" oncontextmenu="var d = new Date(); alert('Copying Prohibited by Law - This image and all included logos are copyrighted by trust-guard \251 '+d.getFullYear()+'.'); return false;"><img name="trustseal" alt="Trust Guard Certified" style="border: 0;" src="http://seals.trust-guard.com/certified-1749-mini-white.gif"></a></td>
- <td><a name="trustlink" href="http://secure.trust-guard.com/certificates/1749" target="_blank" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; window.open(this.href.replace('http', 'https'),'welcome','location='+nonwin+',scrollbars=yes,width=517,height='+screen.availHeight+',menubar=no,toolbar=no'); return false;" oncontextmenu="var d = new Date(); alert('Copying Prohibited by Law - This image and all included logos are copyrighted by trust-guard \251 '+d.getFullYear()+'.'); return false;"><img name="trustseal" alt="Privacy Seal" style="border: 0;" src="http://seals.trust-guard.com/privacy-1749-mini-white.gif"></a></td>
- <td><a name="trustlink" href="http://secure.trust-guard.com/certificates/1749" target="_blank" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; window.open(this.href.replace('http', 'https'),'welcome','location='+nonwin+',scrollbars=yes,width=517,height='+screen.availHeight+',menubar=no,toolbar=no'); return false;" oncontextmenu="var d = new Date(); alert('Copying Prohibited by Law - This image and all included logos are copyrighted by trust-guard \251 '+d.getFullYear()+'.'); return false;"><img name="trustseal" alt="Business Verified Seal" style="border: 0;" src="http://seals.trust-guard.com/business-1749-mini-white.gif"></a></td></tr></tbody></table>
-			
+
 			
 <br>
 
