--- a/v/va/vai/vaisala.com.html
+++ b/v/va/vai/vaisala.com.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the vaisala.com privacy policy that was archived on 2013-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130602175846id_/http%3A//www.vaisala.com/en/contact/Pages/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vaisala.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220054637id_/http%3A//www.vaisala.com/en/contact/Pages/privacypolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html id="ctl00_Html1" xmlns="http://www.w3.org/1999/xhtml" __expr-val-dir="ltr" lang="en-us" dir="ltr"><head id="ctl00_Head1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta http-equiv="Expires" content="0"><meta http-equiv="X-UA-Compatible" content="IE=8"><title>
 	
 	Privacy Policy - Vaisala
 
 </title><link rel="shortcut icon" href="/Style%20Library/vaisala/images/vaisala.ico" type="image/vnd.microsoft.icon"><link rel="stylesheet" type="text/css" href="/Style%20Library/en-US/Themable/Core%20Styles/controls.css">
+<link rel="stylesheet" type="text/css" href="/_layouts/1033/styles/Themable/Menu.css?rev=yPVeKt0FHzxA%2FW4JR0hJng%3D%3D">
 <link rel="stylesheet" type="text/css" href="/Style%20Library/en-US/Core%20Styles/page-layouts-21.css">
 <link rel="stylesheet" type="text/css" href="/_layouts/1033/styles/Themable/search.css?rev=T%2Bhraxktc1A8EnaG5gGMHQ%3D%3D">
 <link rel="stylesheet" type="text/css" href="/_layouts/1033/styles/Themable/corev4.css?rev=iIikGkMuXBs8CWzKDAyjsQ%3D%3D">
@@ -17,10 +18,10 @@
 // <![CDATA[
 document.write('<script type="text/javascript" src="/_layouts/1033/init.js?rev=BjQJs0OCQh3Zfydsdw2MYw%3D%3D"></' + 'script>');
 document.write('<script type="text/javascript" src="/en/contact/_layouts/bamboo.discussionboardplus/jquery.min.js"></' + 'script>');
-document.write('<script type="text/javascript" src="/ScriptResource.axd?d=VMFPCp9xs5XCH8q-rk6dOv5YvmLUp42ZT7S7TQd9HUu4DMQExgHrjyHDpjrirbvmTtU2EEMOeY5X0GuLEyX4OepwioZoF91zizGwkxqLg6ObRpoL3EZJ5EfR_TUEZaLMD5YUkvBLb5vary_TxSMbZpc-7Zw1&amp;t=ffffffffb868b5f4"></' + 'script>');
+document.write('<script type="text/javascript" src="/ScriptResource.axd?d=VMFPCp9xs5XCH8q-rk6dOv5YvmLUp42ZT7S7TQd9HUu4DMQExgHrjyHDpjrirbvmTtU2EEMOeY5X0GuLEyX4OepwioZoF91zizGwkxqLg6ObRpoL3EZJ5EfR_TUEZaLMD5YUkvBLb5vary_TxSMbZpc-7Zw1&amp;t=2e2045e2"></' + 'script>');
 document.write('<script type="text/javascript" src="/_layouts/blank.js?rev=QGOYAJlouiWgFRlhHVlMKA%3D%3D"></' + 'script>');
 // ]]>
-</script><script type="text/javascript" src="/_layouts/1033/init.js?rev=BjQJs0OCQh3Zfydsdw2MYw%3D%3D"></script><script type="text/javascript" src="/en/contact/_layouts/bamboo.discussionboardplus/jquery.min.js"></script><script type="text/javascript" src="/ScriptResource.axd?d=VMFPCp9xs5XCH8q-rk6dOv5YvmLUp42ZT7S7TQd9HUu4DMQExgHrjyHDpjrirbvmTtU2EEMOeY5X0GuLEyX4OepwioZoF91zizGwkxqLg6ObRpoL3EZJ5EfR_TUEZaLMD5YUkvBLb5vary_TxSMbZpc-7Zw1&amp;t=ffffffffb868b5f4"></script><script type="text/javascript" src="/_layouts/blank.js?rev=QGOYAJlouiWgFRlhHVlMKA%3D%3D"></script>
+</script><script type="text/javascript" src="/_layouts/1033/init.js?rev=BjQJs0OCQh3Zfydsdw2MYw%3D%3D"></script><script type="text/javascript" src="/en/contact/_layouts/bamboo.discussionboardplus/jquery.min.js"></script><script type="text/javascript" src="/ScriptResource.axd?d=VMFPCp9xs5XCH8q-rk6dOv5YvmLUp42ZT7S7TQd9HUu4DMQExgHrjyHDpjrirbvmTtU2EEMOeY5X0GuLEyX4OepwioZoF91zizGwkxqLg6ObRpoL3EZJ5EfR_TUEZaLMD5YUkvBLb5vary_TxSMbZpc-7Zw1&amp;t=2e2045e2"></script><script type="text/javascript" src="/_layouts/blank.js?rev=QGOYAJlouiWgFRlhHVlMKA%3D%3D"></script>
 
  
  	<style type="text/css">
@@ -209,11 +210,16 @@ $(document).ready(function(){
 
 	
 	
-<script type="text/javascript" src="/_layouts/1033/core.js?rev=1VDxRR0oL3%2FEtgWNP2%2BGbQ%3D%3D"></script><script type="text/javascript" src="/_layouts/search.js?rev=3pPWp493ZcP8RyBeS4aKSQ%3D%3D"></script></head>
+<style type="text/css">
+	.ctl00_PlaceHolderMain_OikeapalstaWPZONE_0 { border-color:Black;border-width:1px;border-style:Solid; }
+	.ctl00_PlaceHolderMain_WPLeftColWider_0 { border-color:Black;border-width:1px;border-style:Solid; }
+	.ctl00_wpz_0 { border-color:Black;border-width:1px;border-style:Solid; }
+
+</style><script type="text/javascript" src="/_layouts/1033/core.js?rev=1VDxRR0oL3%2FEtgWNP2%2BGbQ%3D%3D"></script><script type="text/javascript" src="/_layouts/search.js?rev=3pPWp493ZcP8RyBeS4aKSQ%3D%3D"></script></head>
 
 <body scroll="no" onload="javascript:_spBodyOnLoadWrapper();">
 
-<form name="aspnetForm" method="post" action="/web/20130602175846id_/http%3A//www.vaisala.com/en/contact/Pages/privacypolicy.aspx" id="aspnetForm">
+<form name="aspnetForm" method="post" action="/web/20131220054637id_/http%3A//www.vaisala.com/en/contact/Pages/privacypolicy.aspx" id="aspnetForm">
 <input type="hidden" name="MSOWebPartPage_PostbackSource" id="MSOWebPartPage_PostbackSource" value="">
 <input type="hidden" name="MSOTlPn_SelectedWpId" id="MSOTlPn_SelectedWpId" value="">
 <input type="hidden" name="MSOTlPn_View" id="MSOTlPn_View" value="0">
@@ -221,7 +227,7 @@ $(document).ready(function(){
 <input type="hidden" name="MSOGallery_SelectedLibrary" id="MSOGallery_SelectedLibrary" value="">
 <input type="hidden" name="MSOGallery_FilterString" id="MSOGallery_FilterString" value="">
 <input type="hidden" name="MSOTlPn_Button" id="MSOTlPn_Button" value="none">
-<input type="hidden" name="__REQUESTDIGEST" id="__REQUESTDIGEST" value="0xE56F94403EB3B63187751B01CBF4119D141EF0F4E5819C1EF8E33D4FACC6D5E2E9F9EBB7C3FF25ADCCFB6DDC4FFDBC3B19D4746D865E84759C1768FB2CC78B94,02 Jun 2013 17:58:45 -0000">
+<input type="hidden" name="__REQUESTDIGEST" id="__REQUESTDIGEST" value="0xE9B22380EF30223297E92B92B2BCC58545084AC97C3ABFC65E70C4F65F97CEF0D4E13785456DA58D9D22C52033A14CB4D2BE2E7D152E34E11315A0DC8346C187,20 Dec 2013 05:46:37 -0000">
 <input type="hidden" name="MSOSPWebPartManager_DisplayModeName" id="MSOSPWebPartManager_DisplayModeName" value="Browse">
 <input type="hidden" name="MSOSPWebPartManager_ExitingDesignMode" id="MSOSPWebPartManager_ExitingDesignMode" value="false">
 <input type="hidden" name="MSOWebPartPage_Shared" id="MSOWebPartPage_Shared" value="">
@@ -243,7 +249,18 @@ var g_wsaEnabled = false;
 var g_wsaLCID = 1033;
 var g_wsaSiteTemplateId = 'VAISALA.SITEDEFINITIONS#2';
 var g_wsaListTemplateId = 850;
-var _fV4UI=true;var _spPageContextInfo = {webServerRelativeUrl: "\u002fen\u002fcontact", webLanguage: 1033, currentLanguage: 1033, webUIVersion:4,pageListId:"{c066ff9e-70de-48c0-9d97-2f3a480b47de}",pageItemId:7, alertsEnabled:true, siteServerRelativeUrl: "\u002f", allowSilverlightPrompt:'True'};document.onreadystatechange=fnRemoveAllStatus; function fnRemoveAllStatus(){removeAllStatus(true)};//]]>
+var _fV4UI=true;var _spPageContextInfo = {webServerRelativeUrl: "\u002fen\u002fcontact", webLanguage: 1033, currentLanguage: 1033, webUIVersion:4,pageListId:"{c066ff9e-70de-48c0-9d97-2f3a480b47de}",pageItemId:7, alertsEnabled:true, siteServerRelativeUrl: "\u002f", allowSilverlightPrompt:'True'};//]]>
+</script>
+<script type="text/javascript">
+<!--
+var L_Menu_BaseUrl="/en/contact";
+var L_Menu_LCID="1033";
+var L_Menu_SiteTheme="";
+//-->
+</script>
+<script type="text/javascript">
+//<![CDATA[
+document.onreadystatechange=fnRemoveAllStatus; function fnRemoveAllStatus(){removeAllStatus(true)};//]]>
 </script>
 
 <script src="/_layouts/blank.js?rev=QGOYAJlouiWgFRlhHVlMKA%3D%3D" type="text/javascript"></script>
@@ -308,11 +325,11 @@ if (typeof(DeferWebFormInitCallback) == 'function') DeferWebFormInitCallback();/
 				<div id="topSearch" class="s4-notdlg">
 					
 						
-                            <table class="s4-wpTopTable" border="1" cellpadding="0" cellspacing="0" width="100%">
+                            <table class="s4-wpTopTable" border="0" cellpadding="0" cellspacing="0" width="100%">
 	<tbody><tr>
 		<td><table border="0" cellpadding="0" cellspacing="0" width="100%">
 			<tbody><tr class="ms-WPHeader">
-				<td align="left" class="ms-wpTdSpace">&nbsp;</td><td title="" id="WebPartTitleWPQ1" class="ms-WPHeaderTd"><h3 style="text-align:justify;" class="ms-standardheader ms-WPTitle">&nbsp;<span></span><span id="WebPartCaptionWPQ1"></span></h3></td><td align="left" class="ms-wpTdSpace">&nbsp;</td>
+				<td align="left" class="ms-wpTdSpace">&nbsp;</td><td title="" id="WebPartTitleWPQ1" class="ms-WPHeaderTd"><h3 style="text-align:justify;" class="ms-standardheader ms-WPTitle"><nobr><span></span><span id="WebPartCaptionWPQ1"></span></nobr></h3></td><td class="ms-WPHeaderTdSelection"><span class="ms-WPHeaderTdSelSpan"><input type="checkbox" id="SelectionCbxWebPartWPQ1" class="ms-WPHeaderCbxHidden" title="Select or deselect  Web Part" onblur="this.className='ms-WPHeaderCbxHidden'" onfocus="this.className='ms-WPHeaderCbxVisible'" onkeyup="WpCbxKeyHandler(event);" onmouseup="WpCbxSelect(event); return false;" onclick="TrapMenuClick(event); return false;"></span></td><td align="left" class="ms-wpTdSpace">&nbsp;</td>
 			</tr>
 		</tbody></table></td>
 	</tr><tr>
