--- a/h/ho/hoo/hooktheory.com.html
+++ b/h/ho/hoo/hooktheory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hooktheory.com privacy policy that was archived on 2013-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130618112956id_/http%3A//www.hooktheory.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hooktheory.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220055113id_/http%3A//www.hooktheory.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -27,11 +27,11 @@
 
 	
 	<meta name="description" content="Your privacy is important to Hooktheory.  Read how we protect the information you provide on this website.">
-<link rel="stylesheet" type="text/css" href="/css/style.css?ts=20130514233112">
+<link rel="stylesheet" type="text/css" href="/css/style.css?ts=20131211005326">
 <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#appId=181836065221861&amp;xfbml=1"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="/js/jquery.fancybox-1.3.4.pack.js"></script>
-<script type="text/javascript" src="/js/hooktheory.js?ts=20130515004335"></script>
-<title>Privacy - hooktheory.com</title>
+<script type="text/javascript" src="/js/hooktheory.js?ts=20131204190423"></script>
+<title>Privacy - Hooktheory</title>
 	
 	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -69,7 +69,9 @@
 	}(document, 'script', 'facebook-jssdk'));*/</script>
 
  	
-
+ 	
+ 	
+ 	
 			
 		<header id="header"><div class="wrap header mobile-header" id="mobile-header"><div class="clearfix"><a href="http://www.hooktheory.com/site/index" style="float:left;"><div class="mobile-logo"></div></a><div class="list-icon" style="float:right;" id="mobile-header-toggle"></div>		
 		<script>
