--- a/c/cr/cry/crytek.com.html
+++ b/c/cr/cry/crytek.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the crytek.com privacy policy that was archived on 2013-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130606112159id_/http%3A//crytek.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crytek.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220083945id_/http%3A//www.crytek.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="Content-Language" content="en">
         <title>Privacy | Crytek</title>
-        <link rel="stylesheet" type="text/css" href="/assets/default.css?rev=47">
+        <link rel="stylesheet" type="text/css" href="/assets/default.css?rev=53">
         <link rel="shortcut icon" href="/assets/favicon.ico">
         <link rel="alternate" type="application/rss+xml" title="Crytek" href="http://www.crytek.com/rss/">
         <link rel="alternate" type="application/rss+xml" title="Crytek Blog" href="http://www.crytek.com/blog/rss/">
@@ -15,15 +15,15 @@
         <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/jquery-1.4.2.min.js" type="text/javascript"></script>
         <script src="/js/swfobject.js" type="text/javascript"></script>
         <script src="/js/swfobject2.js" type="text/javascript"></script>
-        <script src="/js/jquery.uploadify.v2.1.4.min.js?rev=47" type="text/javascript"></script>
-        <script src="/js/jquery.autoellipsis-1.0.3.min.js?rev=47" type="text/javascript"></script>
-        <script src="/js/common.js?rev=47" type="text/javascript"></script>
+        <script src="/js/jquery.uploadify.v2.1.4.min.js?rev=53" type="text/javascript"></script>
+        <script src="/js/jquery.autoellipsis-1.0.3.min.js?rev=53" type="text/javascript"></script>
+        <script src="/js/common.js?rev=53" type="text/javascript"></script>
         <meta name="nid" content="940">
 
 
         <meta property="og:title" content="Crytek">
-        <meta property="og:url" content="http://www.crytek.com/">
         <meta property="og:image" content="http://www.crytek.com/assets/crytek-logo.png">
+	 <meta property="article:publisher" content="https://www.facebook.com/crytek">
         <link rel="image_src" href="http://www.crytek.com/assets/crytek-logo.png">
 
 
@@ -91,7 +91,7 @@
                     <li class="inactive"><a href="/home">Home</a></li>
                     <li class="inactive"><a href="/news">News</a></li>
                     <li class="inactive"><a href="/games">Games</a></li>
-                    <li class="inactive"><a href="/cryengine">CryENGINE</a></li>
+                    <li class="inactive"><a href="/cryengine">CRYENGINE</a></li>
                     <li class="inactive"><a href="/press">Press</a></li>
                     <li class="inactive"><a href="/career">Career</a></li>
                     <li class="inactive"><a href="/company">Company</a></li>
@@ -244,9 +244,10 @@
                     <div class="column margined">
                         <ul>
                             <li><a class="header" href="/games">Games</a></li>
+                            <li><a href="/games/the-collectables">The Collectables</a></li>
                             <li><a href="/games/ryse">Ryse</a></li>
-                            <li><a href="/games/crysis3">Crysis 3</a></li>
                             <li><a href="/games/warface">Warface</a></li>
+                            <li><a href="/games/crysis3">Crysis 3</a></li>
                             <li><a href="/games/fibble">Fibble</a></li>
                             <li><a href="/games/crysis1console">Crysis for Consoles</a></li>
                             <li><a href="/games/crysis2">Crysis 2</a></li>
@@ -257,7 +258,7 @@
                     </div>
                     <div class="column margined">
                         <ul>
-                            <li><a class="header" href="/cryengine">CryENGINE</a></li>
+                            <li><a class="header" href="/cryengine">CRYENGINE</a></li>
                             <li><a href="/cryengine/cryengine3">CryENGINE<sup>®</sup> 3</a></li>
                             <li><a href="/cryengine/cryengine2">CryENGINE<sup>®</sup> 2</a></li>
                             <li><a href="/cryengine/cryengine1">CryENGINE<sup>®</sup> 1</a></li>
