whoisxmlapi.com (archived on 2013-12-20)
{
  "alexa_rank": 119047,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 3695,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.62,
  "homepage_snapshot_redirected_domain": "whoisxmlapi.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130928223529id_/http://www.whoisxmlapi.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130928223529id_/http%3A//whoisxmlapi.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "whoisxmlapi.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131220112506id_/http%3A//www.whoisxmlapi.com/privacy.php",
  "policy_title": "Whois API, LLC Privacy Policy",
  "policy_url": "whoisxmlapi.com/privacy.php",
  "sha1": "d4bb29a2cf6b786e586091e035f580385a167bb7",
  "simhash": 4992247007244517555,
  "simhash_updated": false,
  "site_hostname": "whoisxmlapi.com",
  "site_url": "http://whoisxmlapi.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131220112506",
  "word_count": 588,
  "year": 2013
}

--- a/w/wh/who/whoisxmlapi.com.html
+++ b/w/wh/who/whoisxmlapi.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the whoisxmlapi.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621174339id_/http%3A//whoisxmlapi.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whoisxmlapi.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220112506id_/http%3A//www.whoisxmlapi.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <!--<META NAME="DESCRIPTION" CONTENT="Whois API, best Whois, Whois Lookup, Whois Parser">-->
-<meta name="DESCRIPTION" content="Whois API, Whois web service">
+<meta name="DESCRIPTION" content="Whois API LLC implement a variety of security measures to maintain the safety of your personal information when you place an order or enter, submit, or access your personal information.">
 <meta name="verify-v1" content="wGPlYOrtmV+YmkfnVbZIrEuBNucafQA8kk6lnWyMWWQ=">
 <!--<meta name="keywords" content="Whois API, Whois Lookup API, Whois Parser" />-->
-<meta name="keywords" content="Whois API, Whois web service, Whois service">
+<meta name="keywords" content="">
 
 <meta name="google-site-verification" content="XtIsF0ZXIdKTliKGUpMMSsTkkVGGcWx5nSKA6sv3seU">
 <meta name="msvalidate.01" content="C87F5D8D9E746FF87E5C4D41CB7D70C7">
 
-<title>Whois API, Whois XML API</title>
+<title>Whois API, LLC Privacy Policy</title>
 <!--
 <link href="themes/base/ui.all.css" rel="stylesheet" type="text/css" />
 <link href="themes/base/ui.tabs.css" rel="stylesheet" type="text/css" />
@@ -20,9 +20,11 @@
 <link href="XMLDisplay.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="view.css" media="all">
 <link href="css/colorbox.css" rel="stylesheet" type="text/css" />
+<link href="css/socialite.css" rel="stylesheet" type="text/css" />
 -->
 
 <link href="/whoisxmlapi_prod.css" rel="stylesheet" type="text/css">
+
 <!--<link href="whoisxmlapi_local.css" rel="stylesheet" type="text/css"/>-->
   <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://www.google.com/jsapi"></script>
   <script type="text/javascript">
@@ -38,7 +40,7 @@
 	
 	 <script type="text/javascript" src="/js/prod/jquery.colorbox-min.js"></script>
  <script type="text/javascript" src="/js/prod/whoisxmlapi.js"></script>
-
+ <script type="text/javascript" src="/js/prod/socialite.min.js"></script>
  <!--
  	
    <script type="text/javascript" src="/js/dev/jquery.form.js"></script>   
@@ -60,7 +62,7 @@
  	function init(){
 		$("a:not(.ignore_jssm)", $(document)).jssm('click');
 		$("form:not(.ignore_jssm)",$(document)).jssm('submit');
-
+		Socialite.load();
 	}
 </script>
 
@@ -86,8 +88,8 @@
       <li><a href="/whois-api-contact.php" id="top_contactus" rel="history" class="ignore_jssm">Contact Us</a></li>
           </ul></div>
 <a href="/index.php" class="ignore_jssm"><img src="/images/logo.png" alt="whois API" border="0" class="logo"></a>
-<h1>a unified, consistent Whois API and Whois Parser System</h1>
-<h2></h2>
+<h2>a unified, consistent Whois API and Whois Parser System</h2>
+
 
 <img src="/images/top_icon.png" alt="Whois API" class="icon">
 
@@ -155,7 +157,7 @@ $(document).ready(function(){
 			<input type="submit" size="40" value="Search">
 			<input type="radio" name="outputFormat" value="xml" id="f_xml" checked=""><label for="xml">XML</label>
 			<input type="radio" name="outputFormat" value="json" id="f_json"><label for="json">JSON</label>
-						<a href="https://www.whoisxmlapi.com/order_paypal.php" class="ignore_jssm">Order Now!</a>
+						<a href="https://www.whoisxmlapi.com/order_paypal.php" class="ignore_jssm" title="Order Now!">Order Now!</a>
 		</form>
   			<div id="user_stats">
 
@@ -175,13 +177,11 @@ user anonymous [174.129.228.67] account balance: 50/50
 
 
 
-
-
-
-
 </div>
+
 <!--header end -->
 <!--body start -->
+
 <div id="body">
 	<!-- START PRIVACY POLICY CODE -->
 <div style="background-color:white; padding:10px;">
@@ -290,7 +290,9 @@ user anonymous [174.129.228.67] account balance: 50/50
   <!-- END PRIVACY POLICY CODE -->
 
 </div>
-</div>
+
+</div> 
+
 <!--body end -->
 <!--bodyBottom start -->
 
@@ -465,7 +467,23 @@ section#loved-by ul#brands li.americanexpress{
 
 	
 </script>
+<div style="position:fixed;top:0px;right: 0px;">
+<ul class="social-buttons cf">
+    <li>
+        <a href="http://twitter.com/share" class="socialite twitter-share" data-text="Whois API" data-url="http://whoisxmlapi.com" data-count="vertical" rel="nofollow" target="_blank"><span class="vhidden">Share on Twitter</span></a>
+    </li>
+    <li>
+        <a href="https://plus.google.com/share?url=http://whoisxmlapi.com" class="socialite googleplus-one" data-size="tall" data-href="http://whoisxmlapi.com" rel="nofollow" target="_blank"><span class="vhidden">Share on Google+</span></a>
+    </li>
+    <li>
+        <a href="http://www.facebook.com/sharer.php?u=http://www.whoisxmlapi.com&amp;t=Whois API" class="socialite facebook-like" data-href="http://whoisxmlapi.com" data-send="false" data-layout="box_count" data-width="60" data-show-faces="false" rel="nofollow" target="_blank"><span class="vhidden">Share on Facebook</span></a>
+    </li>
+    <li>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://whoisxmlapi.com&amp;title=Whois API" class="socialite linkedin-share" data-url="http://whoisxmlapi.com" data-counter="top" rel="nofollow" target="_blank"><span class="vhidden">Share on LinkedIn</span></a>
+    </li>
 
-
+</ul>
+<br class="spacer">
+</div>
 
 </body></html>
