ezinearticles.com (archived on 2013-12-20)
{
  "alexa_rank": 605,
  "analysis_subcorpus": true,
  "categories": "advertising;business",
  "char_count": 8037,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.07,
  "homepage_snapshot_redirected_domain": "ezinearticles.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130929184816id_/http://ezinearticles.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130929184816id_/http%3A//ezinearticles.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ezinearticles.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131220210247id_/http%3A//ezinearticles.com/privacy-policy.html",
  "policy_title": "EzineArticles.com Privacy Policy",
  "policy_url": "ezinearticles.com/privacy-policy.html",
  "sha1": "9d9985453e9ecf2d1ae78eda64ba3e6abe202812",
  "simhash": 10353075061475448832,
  "simhash_updated": false,
  "site_hostname": "ezinearticles.com",
  "site_url": "http://ezinearticles.com",
  "smog": 16.49,
  "strict_updated": false,
  "timestamp": "20131220210247",
  "word_count": 1265,
  "year": 2013
}

--- a/e/ez/ezi/ezinearticles.com.html
+++ b/e/ez/ezi/ezinearticles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ezinearticles.com privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601065021id_/http%3A//ezinearticles.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ezinearticles.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220210247id_/http%3A//ezinearticles.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!--<![endif]--><head>
 
@@ -15,10 +15,10 @@
 
 
 	<link rel="shortcut icon" href="/favicon.ico">
-	<link rel="image_src" href="http://ezinearticles.com/images/digg_thumbnail.png">
-	<link rel="search" title="EzineArticles.com" type="application/opensearchdescription+xml" href="http://ezinearticles.com/ssp/ezinearticles.xml">
+	<link rel="image_src" href="//ezinearticles.com/images/digg_thumbnail.png">
+	<link rel="search" title="EzineArticles.com" type="application/opensearchdescription+xml" href="//ezinearticles.com/ssp/ezinearticles.xml">
 
-	<link rel="stylesheet" type="text/css" href="/min/file/6f14d39b75966ecd8c54d30e9fced3831366404782.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="/min/file/6f14d39b75966ecd8c54d30e9fced3831386865966.css" media="screen">
 	
 	
 		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
@@ -340,6 +340,7 @@ _gaq.push(['_trackPageview'],['_trackPageLoadTime']);
 				<a href="http://twitter.com/EzineArticles" target="_blank" title="Follow us on Twitter"><img class="site-sprite follow-icon big-twitter-icon" src="//img.ezinearticles.com/spriting/trans.gif" alt="Follow us on Twitter"></a>
 				<a href="http://www.youtube.com/user/EzineArticles" target="_blank" title="Follow us on YouTube"><img class="site-sprite follow-icon big-you-tube-icon" src="//img.ezinearticles.com/spriting/trans.gif" alt="Follow us on You Tube"></a>
 				<a href="https://plus.google.com/+ezinearticles" target="_blank" title="Follow us on Google+"><img class="site-sprite follow-icon big-google-plus-icon" src="//img.ezinearticles.com/spriting/trans.gif" alt="Follow us on Google+"></a>
+				<a href="http://pinterest.com/ezinearticles/" target="_blank" title="Follow us on Pinterest"><img class="site-sprite follow-icon big-pinterest-icon" src="//img.ezinearticles.com/spriting/trans.gif" alt="Follow us on Pinterest"></a>
 			</li>
 		</ul>
 	</div>
@@ -349,6 +350,7 @@ _gaq.push(['_trackPageview'],['_trackPageLoadTime']);
 
 	</div>
 </div>
+
 
 
 
